--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "headTest": "npm run test --headed",
     "chromeTest": "npm run test --browser chrome",
     "recordDashBoardTest": "npm run test --record --key fa423514-5a84-42a7-b6a0-b5e7191bba12 --reporter mochawesome",
-    "demoBlaze": "npm run test --spec \"cypress/integration/*\""
+    "demoBlaze": "npm run test --spec \"cypress/integration/*\"",
+    "sauceDemo":"npm run test --spec \"cypress/integration/additionaltestcases/CartTotal.ts\""
   },
   "devDependencies": {
     "cy-verify-downloads": "^0.1.15",
